<resources>
    <string name="app_name"> Sudheep CoffeeApp1</string>
    <string name="name_field">Enter your name</string>
    <string name="Topping">Topping</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Whipped">Whipped Cream</string>
    <string name="button_email">Email</string>
    <string name="text_order_details">Your Order Details</string>
    <string name="save">Save Data</string>
    <string name="Report">Sales Report</string>
    <string name="reorder">Reorder</string>
</resources>